@@ -23,6 +23,7 @@ package shadowmage.ancient_warfare.client.gui.elements;
 import java.util.ArrayList;
 import java.util.List;
 
+import net.minecraft.client.gui.GuiTextField;
 import net.minecraft.client.gui.ScaledResolution;
 
 import org.lwjgl.opengl.GL11;
