@@ -20,6 +20,8 @@
  */
 package shadowmage.ancient_warfare.client.gui.elements;
 
+import net.minecraft.client.gui.GuiTextField;
+
 public interface IGuiElementCallback
 {
 
